created html images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion roaring" title="
+    picture of a lion roaring">
   </body>
 </html>
